Modify scoreCounter and what happens when clicking on the buttons so it returns a text explaining the result

--- a/style.css
+++ b/style.css
@@ -94,3 +94,10 @@ h2 {
 .computerName {
     margin-bottom: 0;
 }
+
+.resultTextContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;   
+}
