--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     gap: 90px;
-    margin: 100px;
+    margin: 25px, 0, 50px, 0;
 }
 
 .userScoreContainer {
@@ -100,4 +100,17 @@ h2 {
     justify-content: center;
     align-items: center;
     height: 120px;   
+}
+
+.resultText {
+    font-size: 35px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: green;
+}
+
+.resultTextContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
 }
